tests/grammar/snapshots/r#mod__grammar__alpha034__multiply_and_divide.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 * 2 / 3\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Divide(
                            (
                                Multiply(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                4..5,
                                            ),
                                        ),
                                        4..5,
                                    ),
                                ),
                                0..5,
                            ),
                            (
                                Number(
                                    (
                                        3.0,
                                        8..9,
                                    ),
                                ),
                                8..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ],
    ),
    0..9,
)
