tests/grammar/snapshots/r#mod__grammar__alpha034__mults_and_adds-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 * 2 + 3\").unwrap()"
---
Statement(
    [
        Expression(
            Add(
                Multiply(
                    Number(
                        1.0,
                    ),
                    Number(
                        2.0,
                    ),
                ),
                Number(
                    3.0,
                ),
            ),
        ),
    ],
)
