tests/grammar/snapshots/r#mod__grammar__alpha034__mults_and_adds.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 * 3\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Add(
                        Number(
                            1.0,
                        ),
                        (),
                        Multiply(
                            Number(
                                2.0,
                            ),
                            (),
                            Number(
                                3.0,
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
