tests/grammar/snapshots/r#mod__grammar__alpha034__nameof-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"nameof nameof variable\").unwrap()"
---
Statement(
    [
        Expression(
            Nameof(
                Nameof(
                    Var(
                        "variable",
                    ),
                ),
            ),
        ),
    ],
)
