tests/grammar/snapshots/r#mod__grammar__alpha034__nameof.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"nameof variable\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Nameof(
                        (),
                        VariableGet(
                            Variable(
                                "variable",
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
