tests/grammar/snapshots/r#mod__grammar__alpha034__neg-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"-(1 - 2)\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                Parentheses(
                                    (
                                        Subtract(
                                            (
                                                Number(
                                                    (
                                                        1.0,
                                                        2..3,
                                                    ),
                                                ),
                                                2..3,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        6..7,
                                                    ),
                                                ),
                                                6..7,
                                            ),
                                        ),
                                        2..7,
                                    ),
                                ),
                                1..8,
                            ),
                        ),
                        1..8,
                    ),
                ),
                0..8,
            ),
        ),
        0..8,
    ),
]
