tests/grammar/snapshots/r#mod__grammar__alpha034__neg.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"-(1)\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Neg(
                            (
                                Parentheses(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                2..3,
                                            ),
                                        ),
                                        2..3,
                                    ),
                                ),
                                1..4,
                            ),
                        ),
                        1..4,
                    ),
                ),
                0..4,
            ),
        ],
    ),
    0..4,
)
